# iguana

./: .gitignore  LICENSE  Makefile  README.md  manage.py  pessoafisica.json  pyproject.toml
iguana/: asgi.py  settings.py  urls.py  wsgi.py
iguana/base/: apps.py  serializers.py  tests.py  urls.py
iguana/base/fixtures/: paises.json  pessoafisica.json  user.json
iguana/base/migrations/: 0001_initial.py  0002_auto_20210503_2206.py  0002_auto_20210528_1832.py  0003_auto_20210504_1242.py  0004_endereco_telefone.py  0005_auto_20210504_1404.py  0006_auto_20210504_1746.py  0007_alter_pessoafisica_options.py  0008_auto_20210513_2012.py
iguana/base/models/: __init__.py  endereco.py  mixins.py  pessoa_fisica.py  pessoa_juridica.py  telefone.py  user.py
iguana/base/models/geo/: __init__.py  pais.py
iguana/base/views/: __init__.py  pessoa_fisica.py  user.py
